--- a/src/testTools/testTools.vcxproj
+++ b/src/testTools/testTools.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="testExcel.h" />
     <ClInclude Include="testGTest.h" />
   </ItemGroup>
   <ItemGroup>
@@ -174,6 +175,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="testExcel.cpp" />
     <ClCompile Include="testGTest.cpp" />
     <ClCompile Include="testTools.cpp" />
   </ItemGroup>
