--- a/src/testTools/testTools.vcxproj.filters
+++ b/src/testTools/testTools.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="testGTest.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="testExcel.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="testGTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="testExcel.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
