--- a/src/testTools/testTools.vcxproj.filters
+++ b/src/testTools/testTools.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="testCplex.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="testExcel.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +45,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="testCplex.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="testExcel.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
